2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

    * win/configure       (regenerated)

2009-11-30  Jan Nijtmans  <nijtmans@users.sf.net>

    * win/Makefile.in  Better dependancies in case of static
    build. Generate tktest86.dll and tktest86.lib.

2009-11-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h     Make all internal initialization
	* generic/tkTest.c     routines MODULE_SCOPE
	* generic/tkOldTest.c
	* generic/tkSquare.c
	* carbon/tkMaxOSXTest.c
	* macosx/tkMaxOSXTest.c
	* win/tkWinTest.c
	* win/tcl.m4           (copied from Tcl 8.6)
	* win/configure        (regenerated)

2009-11-25  Stuart Cassoff  <stwo@users.sf.net>

	* unix/tcl.m4:		[Patch 2892871]: Remove unneeded
				AC_STRUCT_TIMEZONE.
	* unix/configure:	Regenerated with autoconf-2.59.

2009-11-24  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2902814]: Use the correct
	type for the array of data passed into X. It's wrong, but "right"
	because of a mistake in the X11 specification.

2009-11-23  Andreas Kupries  <andreask@activestate.com>

	* library/safetk.tcl (::safe::loadTk): [Bug 2902573]: Fixed access
	to the cleanupHook of the safe base. The code used the old
	internal commands which have been removed since 2009-11-05/06. See
	Tcl's ChangeLog.

2009-11-23  Donal K. Fellows  <dkf@users.sf.net>

	* unix/Makefile.in: Added .PHONY lines to stop make from getting
	confused when someone makes an error in a rule.

2009-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winWm.test: [Bug 2899949]: Make sure the window is still
	* win/tkWinWm.c:    present when handling delayed activation.

	* win/Makefile.vc: Include tk stubs in the tktest link

2009-11-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkUtil.c: Remove some anachronistic techniques (pointless
	casts, mixed assignments and tests, etc.)

	* generic/tk3d.c, generic/tkBitmap.c, generic/tkColor.c:
	* generic/tkCursor.c, generic/tkFont.c, generic/tkTextIndex.c: