@@ -9,7 +9,7 @@
  * Copyright (c) 1998-1999 by Scriptics Corporation.
  * All rights reserved.
  *
- * RCS: @(#) $Id: tkIntPlatDecls.h,v 1.35 2009/06/29 14:35:01 das Exp $
+ * RCS: @(#) $Id: tkIntPlatDecls.h,v 1.36 2009/12/02 21:16:43 nijtmans Exp $
  */
 
 #ifndef _TKINTPLATDECLS
@@ -223,6 +223,12 @@ EXTERN void		TkWinSetHINSTANCE (HINSTANCE hInstance);
 #define TkWinGetPlatformTheme_TCL_DECLARED
 /* 35 */
 EXTERN int		TkWinGetPlatformTheme (void);
+#endif
+#ifndef TkWinChildProc_TCL_DECLARED
+#define TkWinChildProc_TCL_DECLARED
+/* 36 */
+EXTERN LRESULT CALLBACK	 TkWinChildProc (HWND hwnd, UINT message,
+				WPARAM wParam, LPARAM lParam);
 #endif
 #endif /* WIN */
 #ifdef MAC_OSX_TK /* AQUA */
@@ -582,6 +588,7 @@ typedef struct TkIntPlatStubs {
     int (*tkWinGetPlatformId) (void); /* 33 */
     void (*tkWinSetHINSTANCE) (HINSTANCE hInstance); /* 34 */
     int (*tkWinGetPlatformTheme) (void); /* 35 */
+    LRESULT (CALLBACK *tkWinChildProc) (HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam); /* 36 */
 #endif /* WIN */
 #ifdef MAC_OSX_TK /* AQUA */
     void (*tkGenerateActivateEvents) (TkWindow * winPtr, int active); /* 0 */
@@ -808,6 +815,10 @@ extern const TkIntPlatStubs *tkIntPlatStubsPtr;
 #ifndef TkWinGetPlatformTheme
 #define TkWinGetPlatformTheme \
 	(tkIntPlatStubsPtr->tkWinGetPlatformTheme) /* 35 */
+#endif
+#ifndef TkWinChildProc
+#define TkWinChildProc \
+	(tkIntPlatStubsPtr->tkWinChildProc) /* 36 */
 #endif
 #endif /* WIN */
 #ifdef MAC_OSX_TK /* AQUA */
